tasklist and raw json scroll issue, remove button not working, file icon overlapped

--- a/app/js/components/Thread/style/css/style.css
+++ b/app/js/components/Thread/style/css/style.css
@@ -252,7 +252,7 @@ div.writers-count-wrapper .h-inner-wrapper {
 	width: 65%; text-align: left;
 }
 .comment-attachment-file-num{
-	width: 20px; text-align: left; float: left;
+	width: 35px; text-align: left; float: left;
 }
 .comment-attachment-num{
 	float: left; padding-right: 2px; text-align: center; color: #666666; font-size: 14px;
